net-irc/irker/ChangeLog
# ChangeLog for net-irc/irker
# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
# (auto-generated from git log)

*irker-2.13 (09 Aug 2015)
*irker-2.12 (09 Aug 2015)
*irker-2.11 (09 Aug 2015)
*irker-2.9 (09 Aug 2015)
*irker-1.20 (09 Aug 2015)
*irker-1.19 (09 Aug 2015)

  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
  +files/2.7-Register-author_name-as-author-instead-of-email-user.patch,
  +files/2.7-irkerhook-Remove-file-listing.patch, +files/irker.conf.d,
  +files/irker.init, +files/irkerd.confd, +files/irkerd.initd,
  +irker-1.19.ebuild, +irker-1.20.ebuild, +irker-2.9.ebuild,
  +irker-2.11.ebuild, +irker-2.12.ebuild, +irker-2.13.ebuild, +metadata.xml:
  proj/gentoo: Initial commit

  This commit represents a new era for Gentoo:
  Storing the gentoo-x86 tree in Git, as converted from CVS.

  This commit is the start of the NEW history.
  Any historical data is intended to be grafted onto this point.

  Creation process:
  1. Take final CVS checkout snapshot
  2. Remove ALL ChangeLog* files
  3. Transform all Manifests to thin
  4. Remove empty Manifests
  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
  5.1. Do not touch files with -kb/-ko keyword flags.

  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
  tests
  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
  project
  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
  developer, wrote Git features for the migration
  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
  cvs2svn
  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
  work in migration
  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
  the bikeshed

  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Use https by default

  Convert all URLs for sites supporting encrypted connections from http to
  https

  Signed-off-by: Justin Lecher <jlec@gentoo.org>

  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Revert DOCTYPE SYSTEM https changes in metadata.xml

  repoman does not yet accept the https version.
  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.

  Bug: https://bugs.gentoo.org/552720

*irker-2.15 (19 Jan 2016)

  19 Jan 2016; Patrick Lauer <patrick@gentoo.org> +irker-2.15.ebuild:
  Bump

  Package-Manager: portage-2.2.27

  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
  Set appropriate maintainer types in metadata.xml (GLEP 67)

  09 Mar 2016; Patrice Clement <monsieurp@gentoo.org> -files/irker.conf.d,
  -files/irker.init, -irker-1.19.ebuild, -irker-1.20.ebuild:
  Prune old versions

  Package-Manager: portage-2.2.26

  09 Mar 2016; Patrice Clement <monsieurp@gentoo.org> irker-2.9.ebuild,
  irker-2.11.ebuild, irker-2.12.ebuild, irker-2.13.ebuild, irker-2.15.ebuild:
  Add missing die on sed

  Package-Manager: portage-2.2.26

  09 Mar 2016; Patrice Clement <monsieurp@gentoo.org> irker-2.15.ebuild:
  Install systemd service on every system.

  Makefile uses `pkg-config --variable=systemdsystemunitdir systemd` to
  determine in which directory systemd service file should be installed.
  It can be empty if building host has no systemd installed but OpenRC.

  Rely on systemd eclass.

  Package-Manager: portage-2.2.26

  09 Mar 2016; Patrice Clement <monsieurp@gentoo.org> irker-2.9.ebuild,
  irker-2.11.ebuild, irker-2.12.ebuild, irker-2.13.ebuild, irker-2.15.ebuild:
  irk and irkerhook.py are not python3 friendly

    $ /usr/lib/python-exec/python3.4/irk foo bar
    Traceback (most recent call last):
      File "/usr/lib/python-exec/python3.4/irk", line 50, in <module>
        main()
      File "/usr/lib/python-exec/python3.4/irk", line 41, in main
        message = message.decode('string_escape')
    AttributeError: 'str' object has no attribute 'decode'

    $ /usr/lib/python-exec/python3.4/irkerhook.py
      File "/usr/lib/python-exec/python3.4/irkerhook.py", line 432
        print message
                    ^
    SyntaxError: Missing parentheses in call to 'print'

  Package-Manager: portage-2.2.26

  09 Mar 2016; Patrice Clement <monsieurp@gentoo.org> files/irkerd.confd,
  files/irkerd.initd:
  Default logging is now syslog instead of file

  This behaviour appeared in version 2.9.

  Handle IRKERD_LOGFILE checkpath only when IRKERD_LOGFILE is defined as
  IRKERD_LOGLEVEL is independant.

  Package-Manager: portage-2.2.26

*irker-2.16 (09 Mar 2016)

  09 Mar 2016; Patrice Clement <monsieurp@gentoo.org> +irker-2.16.ebuild:
  Version bump

  irker now suports python3.
  See-Also:
  https://gitlab.com/esr/irker/commit/9311a6d7b6c1522f338f010d3e1a6b741c031325

  This series of commits closes #896.

  Pull-Request: https://github.com/gentoo/gentoo/pull/896
  Acked-by: Patrick Lauer <patrick@gentoo.org>
  Signed-off-by: Patrice Clement <monsieurp@gentoo.org>
  Package-Manager: portage-2.2.26

  18 May 2016; Austin English <wizardedit@gentoo.org> files/irkerd.initd:
  use #!/sbin/openrc-run instead of #!/sbin/runscript

*irker-2.17 (25 Jun 2016)

  25 Jun 2016; Patrice Clement <monsieurp@gentoo.org>
  +files/2.17-irkerhook-Remove-file-listing.patch, +irker-2.17.ebuild:
  Version bump

  Add an option USE flag for new SOCKS support.
  Update irkerhook-Remove-file-listing.patch with a rebased version that apply
  on this new version

  Package-Manager: portage-2.2.26
  Gentoo-Bug: https://bugs.gentoo.org/579524
  Closes: https://github.com/gentoo/gentoo/pull/1223

  Signed-off-by: Patrice Clement <monsieurp@gentoo.org>

  26 Jun 2016; Markus Meier <maekke@gentoo.org> irker-2.16.ebuild:
  add ~arm, bug #585628

  Package-Manager: portage-2.3.0_rc1
  RepoMan-Options: --include-arches="arm"

*irker-2.18 (02 Sep 2016)

  02 Sep 2016; Patrice Clement <monsieurp@gentoo.org> +irker-2.18.ebuild:
  version bump.

  As per http://www.catb.org/~esr/irker/NEWS.

  List of changes:
  * Remove python 3.3 support.
  * Add python 3.5 support.
  * Move to EAPI 6.
  * Use default() in src_prepare and src_install.
  * Replace dohtml with HTML_DOCS.
  * Replace dodoc with DOCS.
  * Drop inherit eutils.
  * Replace EROOT with EPREFIX.
  * Drop double slash when $ED is used.

  Package-Manager: portage-2.2.28
  Closes: https://github.com/gentoo/gentoo/pull/2109

  Signed-off-by: Patrice Clement <monsieurp@gentoo.org>

  01 Nov 2016; Michał Górny <mgorny@gentoo.org> irker-2.16.ebuild,
  irker-2.17.ebuild:
  global: Drop dead implementations from PYTHON_COMPAT

